turtleart.diskfourth.DiskFourth.scala.error
Compilation error:
DiskFourth:2: error: type mismatch;
 found   : Double
 required: Int
  var x:Int = getX()
                  ^DiskFourth:3: error: type mismatch;
 found   : Double
 required: Int
  var y:Int = getY()
                  ^