turtleart.diskfourth.DiskFourth.scala.code
override def run() {
  var x:Int = getX()
  var y:Int = getY()
  for(i <- 1 to 90) {
    avance(100)
    setPos(x, y)
    droite(1)
  }
}